# eitraining

./: README.md  pyproject.toml
deploy/: README.md  install_immutable_release.sh
deploy/systemd/: eitraining-weekly.service  eitraining-weekly.timer
eitraining/: __init__.py  cli.py  io.py  memory_scoring.py  normalize.py  pipeline.py  replay.py  training_examples.py
tests/: test_cli.py  test_replay.py  test_sibling_domain_import_boundaries.py
