[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eitraining"
version = "0.1.0"
description = "Outcome and replay training pipeline for EI self-evolution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eitraining = "eitraining.cli:main"

[tool.setuptools.packages.find]
include = ["eitraining*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
